hard-gists/05aadb969e43788593d3/run.log
=== Docker Run Log for 05aadb969e43788593d3 ===
Started at: Mi 29. Okt 11:28:33 CET 2025

[2025-10-29 11:28:33] START: Running container for 05aadb969e43788593d3
[2025-10-29 11:28:34] SUCCESS: Container 6739e2bb511cee85fb61fd6189d1b793b6775ab76f0948892bfd3c7fea96f48d started for 05aadb969e43788593d3
=== Container logs for 05aadb969e43788593d3 ===
  File "/snippet.py", line 12
    mask = (2L**n) - 1
            ^
SyntaxError: invalid decimal literal
=== End of logs for 05aadb969e43788593d3 ===
[2025-10-29 11:28:36] INFO: Container 6739e2bb511cee85fb61fd6189d1b793b6775ab76f0948892bfd3c7fea96f48d has stopped
